API: Allow usage of self in user routes
